ingress-controller-v1/infra-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infra-app
  template:
    metadata:
      labels:
        app: infra-app
    spec:
      containers:
      - name: infra-app
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: infra-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: infra-html
        configMap:
          name: infra-html
