ingress-controller-v1/stg-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stg-app
  template:
    metadata:
      labels:
        app: stg-app
    spec:
      containers:
      - name: stg-app
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: stg-app-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: stg-app-html
        configMap:
          name: stg-app-html
