ingress-controller-v1/vm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vm-app
  template:
    metadata:
      labels:
        app: vm-app
    spec:
      containers:
      - name: vm-app
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vm-app-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: vm-app-html
        configMap:
          name: vm-app-html
