ingress-controller-v1/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: infra-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: infra-service
#                 port:
#                   number: 80

#           - path: /vm
#             pathType: Prefix
#             backend:
#               service:
#                 name: vm-service
#                 port:
#                   number: 80

#           - path: /storage
#             pathType: Prefix
#             backend:
#               service:
#                 name: stg-service
#                 port:
#                   number: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /vm(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vm-service
                port:
                  number: 80

          - path: /storage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: stg-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-service
                port:
                  number: 80
